[package]
name = "felt-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-felt = { git = "https://github.com/lambdaclass/cairo-rs" }
hex = "0.4.3"
starknet-ff = { git = "https://github.com/xJonathanLEI/starknet-rs" }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }

[[bench]]
name = "add"
harness = false

[[bench]]
name = "add_assign"
harness = false
