[package]
name = "felt-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-felt = { git = "https://github.com/lambdaclass/cairo-rs" }
hex = "0.4.3"
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks" }
stark_curve = { git = "https://github.com/eqlabs/pathfinder" }
stark_hash = { git = "https://github.com/eqlabs/pathfinder" }
starknet-ff = { git = "https://github.com/xJonathanLEI/starknet-rs" }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }

[[bench]]
name = "add"
harness = false

[[bench]]
name = "add_assign"
harness = false

[[bench]]
name = "sub"
harness = false

[[bench]]
name = "sub_assign"
harness = false

[[bench]]
name = "mul"
harness = false

[[bench]]
name = "mul_assign"
harness = false

[[bench]]
name = "invert"
harness = false

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1
